# CompiladoresInterpretes

./: .gitignore
Practica1/: CMakeLists.txt  Practica1.txt  README.txt  compilar.sh  definiciones.h  errores.c  errores.h  lexico.c  lexico.h  main.c  sintactico.c  sintactico.h  sistemaentrada.c  sistemaentrada.h  tablasimbolos.c  tablasimbolos.h
Practica2/: CMakeLists.txt  Practica2.txt  README.txt  definiciones.h  errores.c  errores.h  flex.l  lexico.c  lexico.h  main.c  sintactico.c  sintactico.h  tablasimbolos.c  tablasimbolos.h
Practica3/: CMakeLists.txt  LEEME.txt  Makefile  Practica3.cbp  Practica3.txt  bison.y  comandos.c  comandos.h  compilar.sh  errores.c  errores.h  flex.l  lexico.c  lexico.h  libreria.c  main.c  sintactico.c  sintactico.h  tablasimbolos.c  tablasimbolos.h
